Fix: helloworld.py with a correct user mention Fix: No more None language in console

--- a/assets/config-example.json
+++ b/assets/config-example.json
@@ -1,8 +1,8 @@
 {
     "token": "Put_Your_Token_Here",
     "encryption_key": "Put_Your_Key_Here",
-    "commands_directory": "./commands",
-    "prefix": "Your_Prefix_Here",
-    "guild_id": "Your_Guild_ID_Here",
-    "owner_id": "Your_User_ID_Here"
+    "commands_directory": "Put_Your_Commands_Directory_Here",
+    "prefix": "Put_Your_Prefix_Here",
+    "guild_id": "Put_Your_Guild_ID_Here",
+    "owner_id": "Put_Your_User_ID_Here"
 }
