--- a/assets/config-example.json
+++ b/assets/config-example.json
@@ -2,7 +2,12 @@
     "token": "Put_Your_Token_Here",
     "encryption_key": "Put_Your_Key_Here",
     "commands_directory": "Put_Your_Commands_Directory_Here",
-    "prefix": "Put_Your_Prefix_Here",
+    "activity": {
+        "type": "watching",
+        "name": "for /help",
+        "status": "DND"
+    },
+    "bot_invite": "https://discord.com/oauth2/authorize?client_id=1233329765390356532&scope=bot&permissions=8",
     "guild_id": "Put_Your_Guild_ID_Here",
     "owner_id": "Put_Your_User_ID_Here",
     "in_dev_mode": true
